--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>
-    Esta es la ejercitacion de la clase 1
+        Esta es la ejercitacion de la clase 1
     </h1>
+        <a href="./ejercitacion clase 2.html" target="_blank">
+            EJERCITACION CLASE 2
+        </a>
 </body>
 </html>
