ejercitacion clase 3, se agregaron links a CSS y se escribio codigo en CSS

--- a/ejercitacion clase 2.html
+++ b/ejercitacion clase 2.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EJERCITACION</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="ejercitacion3">
             <ul>
                 <li>
                     <a href="https://www.nationalgeographic.com.es/animales/perros" target="_blank">
@@ -36,7 +37,7 @@
         <p>
             Complete sus datos:
         </p>
-        <form method="" action="" class="formulario">
+        <form class="ejercitacion3" method="" action="" class="formulario">
             <label for="nombre">Nombre</label>
             <input type="text" name="nombre" id="nombre">
             <label for="apellido">Apellido</label>
