--- a/ejercitacion clase 2.html
+++ b/ejercitacion clase 2.html
@@ -8,73 +8,77 @@
 </head>
 <body>
     <header>
-        <nav class="ejercitacion3">
-            <ul>
-                <li>
-                    <a href="https://www.nationalgeographic.com.es/animales/perros" target="_blank">
-                    Pagina de perros
-                    </a>
-                </li>
-                <li>
-                    <a href="https://enciclopediaiberoamericana.com/peces/" target="_blank">
-                    Pagina de peces
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.purina.es/encuentra-mascota/razas-de-gato" target="_blank">
-                    Pagina de gatos
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.expertoanimal.com/animales-exoticos-del-mundo-3774.html" target="_blank">
-                    Pagina de animales exoticos
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <div class="formato-li" >
+            <nav class="ejercitacion3">
+                <ul>
+                    <li>
+                        <a href="https://www.nationalgeographic.com.es/animales/perros" target="_blank">
+                        Pagina de perros
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://enciclopediaiberoamericana.com/peces/" target="_blank">
+                        Pagina de peces
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.purina.es/encuentra-mascota/razas-de-gato" target="_blank">
+                        Pagina de gatos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.expertoanimal.com/animales-exoticos-del-mundo-3774.html" target="_blank">
+                        Pagina de animales exoticos
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+    </div>
     </header>
     <main>
-        <p>
-            Complete sus datos:
-        </p>
-        <form class="ejercitacion3" method="" action="" class="formulario">
-            <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" id="nombre">
-            <label for="apellido">Apellido</label>
-            <input type="text" name="apellido" id="apellido"><br>
-            <label for="fecha_nacimiento"> Fecha de nacimiento:</label>
-            <input type="date" name="fecha_nacimiento" id="fecha_nacimiento">
-            <label for="dni">DNI</label>
-            <input type="number" name="dni" id="dni"><br>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email"><br>
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password"><br>
-            <h4>Indique sexo: </h4>
-            Femenino: <input type="radio" name="sexo">
-            Maculino: <input type="radio" name="sexo"> <br>
-            <h4>Seleccione su pais </h4>
-            <select name="Pais" id="pais">
-                <option value="arg">Argentina</option>
-                <option value="bra">Brasil</option>
-                <option value="par">Paraguay</option>
-                <option value="uru">Uruguay</option>
-                <option value="chi">Chile</option>
-                <option value="otr">Otro</option>
-            </select>
-            <br>
-            <h4>Indique sus intereses a continuacion:</h4>
-                <input type="checkbox"name="Ideas de looks">Looks <br>
-                <input type="checkbox" name="Tendencias">Tendencias <br>
-                <input type="checkbox" name="tutoriales customizados">Tutoriales de Customizados <br>
-                <input type="checkbox" name="otro">Otro
-            <h4> Escribí tu interes: </h4>
-                <textarea name="" id="" cols="30" rows="10"></textarea><br>
-                <h4>Que tan interesante te parecio esta pagina: </h4>
-                <input type="range"> <br>
-                <input type="submit" value="enviar">
-                <input type="reset" value="cancelar"><br>
-        </form> 
+        <div class="ancho">
+            <p>
+                Complete sus datos:
+            </p>
+            <form class="ejercitacion3" method="" action="" class="formulario">
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre" id="nombre">
+                <label for="apellido">Apellido</label>
+                <input type="text" name="apellido" id="apellido"><br>
+                <label for="fecha_nacimiento"> Fecha de nacimiento:</label>
+                <input type="date" name="fecha_nacimiento" id="fecha_nacimiento">
+                <label for="dni">DNI</label>
+                <input type="number" name="dni" id="dni"><br>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email"><br>
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password"><br>
+                <h4>Indique sexo: </h4>
+                Femenino: <input type="radio" name="sexo">
+                Maculino: <input type="radio" name="sexo"> <br>
+                <h4>Seleccione su pais </h4>
+                <select name="Pais" id="pais">
+                    <option value="arg">Argentina</option>
+                    <option value="bra">Brasil</option>
+                    <option value="par">Paraguay</option>
+                    <option value="uru">Uruguay</option>
+                    <option value="chi">Chile</option>
+                    <option value="otr">Otro</option>
+                </select>
+                <br>
+                <h4>Indique sus intereses a continuacion:</h4>
+                    <input type="checkbox"name="Ideas de looks">Looks <br>
+                    <input type="checkbox" name="Tendencias">Tendencias <br>
+                    <input type="checkbox" name="tutoriales customizados">Tutoriales de Customizados <br>
+                    <input type="checkbox" name="otro">Otro
+                <h4> Escribí tu interes: </h4>
+                    <textarea name="" id="" cols="30" rows="10"></textarea><br>
+                    <h4>Que tan interesante te parecio esta pagina: </h4>
+                    <input type="range"> <br>
+                    <input type="submit" value="enviar">
+                    <input type="reset" value="cancelar"><br>
+            </form> 
+    </div>
     </main>
 
 </body>
